# logging-api

./: .gitignore  CMakeLists.txt  README.md
logging-api/: CMakeLists.txt
logging-api/include/: logging-api.h
logging-api/src/: logging-api.cpp  main.cpp
logging-api/test/: CMakeLists.txt  LoggingTest.cpp
